--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "bootstrap": "^5.3.2",
+    "next": "13.5.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-multi-carousel": "^2.8.4",
+    "react-player": "^2.13.0",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.32",
+    "swiper": "^10.3.1"
   }
 }
