--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "next": "13.5.4",
     "react": "^18",
