--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "@reduxjs/toolkit": "^1.9.7",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "next": "13.5.4",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.13.0",
+    "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.32",
     "swiper": "^10.3.1"
