--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/material": "^5.14.13",
     "@reduxjs/toolkit": "^1.9.7",
     "aos": "^2.3.4",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "next": "13.5.4",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
     "react-multi-carousel": "^2.8.4",
+    "react-paginate": "^8.2.0",
     "react-player": "^2.13.0",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
